--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>phone api</title>
 
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.4/dist/full.css" rel="stylesheet" type="text/css" />
-<script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
     <header>
-<h2 class="text-2xl">hunting phone </h2>
+        <h2 class="text-2xl">hunting phone </h2>
     </header>
 
     <main class="container mx-auto mt-8">
@@ -18,22 +20,45 @@
             <input id="search-field" type="text" placeholder="Search" class="input input-bordered w-full max-w-xs" />
             <button onclick="handleSearch()" class="btn btn-accent">Search</button>
 
+            <!-- another search  -->
+            <!-- <input id="search-field-2" type="text" placeholder="Search" class="input input-bordered w-full max-w-xs" />
+            <button onclick="handleSearch2()" class="btn btn-primary">Search</button> -->
+
+
         </section>
         <section>
-            <div id="phone-container" class="grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 gap-4">
-                <!-- <div class="card w-96 bg-gray-100 shadow-xl">
-                    <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Shoes!</h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Buy Now</button>
-                      </div>
-                    </div>
-                  </div> -->
+            <div id="loading-spinner" class="text-center my-40 hidden">
+                <span class="loading loading-dots loading-lg"></span>
 
             </div>
+            <div id="phone-container" class="grid grid-cols-1 lg:grid-cols-3 md:grid-cols-2 gap-4">
+            </div>
+
+            <!-- show all  -->
+            <div id="show-all-container" class="hidden text-center my-8">
+                <button class="btn btn-accent">Show All</button>
+
+            </div>
+
         </section>
+
+        <!-- modal  -->
+
+        <!-- Open the modal using ID.showModal() method -->
+        <button class="btn" onclick="show_details_modal.showModal()">open modal</button>
+        <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
+            <form method="dialog" class="modal-box">
+                <h3 class="font-bold text-lg"></h3>
+                <p id="phone-name" class="py-4">Press ESC key or click the button below to close</p>
+                <div id="show-detail-container">
+
+                </div>
+                <div class="modal-action">
+                    <!-- if there is a button in form, it will close the modal -->
+                    <button class="btn">Close</button>
+                </div>
+            </form>
+        </dialog>
 
     </main>
 
@@ -43,4 +68,5 @@
 
     <script src="js/phone.js"></script>
 </body>
+
 </html>
